--- a/doc/環境構築.md
+++ b/doc/環境構築.md
@@ -1,14 +1,22 @@
+[READMEに戻る](../README.md)
+# 環境構築(Djangoのロケット飛ばす所まで)
 ## Githubからコードをcloneする
-Macの人はターミナル、Windowsの人はコマンドプロンプトを開き以下のコマンドを入力する。
-【注意：】
+デスクトップに移動する。
+
+ターミナルを開き以下のコマンドを入力。 【クローンするディレクトリに注意】
 
 ```
-git clone 
+cd Desktop
+git clone https://github.com/alterbooth/hol-todo-app-on-azure.git
 ```
 
 ## VSCodeを開く
+クローンしたフォルダに移動し、VSCodeで開く。
 
-
+```
+cd hol-todo-app-on-azure
+code .
+```
 
 ## settings.pyを書き換える
 ./todoProject/settings.pyを以下に書き換える
@@ -60,6 +68,7 @@ python manage.py runserver 0.0.0.0:8000
 ```
 
 ## requirements.txtを編集
+requirements.txtに以下を記述する。
 
 ```
 Django==3.1
@@ -82,7 +91,10 @@ image を作成したので、コンテナを起動させます。
 docker container run -d -p 8000:8000 hello-world
 ```
 
-[http://localhost:8000](http://localhost:8000)にアクセスするとロケットが飛ぶ
+[http://localhost:8000](http://localhost:8000)
+
+<a href="http://localhost:8000" target="_blank">http://localhost:8000</a>
+にアクセスするとロケットが飛ぶ
 
 
 ### 参考サイト
