--- a/doc/環境構築.md
+++ b/doc/環境構築.md
@@ -6,6 +6,8 @@
 ターミナルを開き以下のコマンドを入力。 【クローンするディレクトリに注意】
 
 ```
+#ターミナル
+
 cd Desktop
 git clone https://github.com/alterbooth/hol-todo-app-on-azure.git
 ```
@@ -14,14 +16,18 @@ git clone https://github.com/alterbooth/hol-todo-app-on-azure.git
 クローンしたフォルダに移動し、VSCodeで開く。
 
 ```
+#ターミナル
+
 cd hol-todo-app-on-azure
 code .
 ```
 
 ## settings.pyを書き換える
-./todoProject/settings.pyを以下に書き換える
+settings.pyを以下に書き換える
 
-```python:./todoProject/settings.py
+```
+#./todoProject/settings.py
+
 ALLOWED_HOSTS = ['*']
  :
 LANGUAGE_CODE = 'ja'
@@ -31,6 +37,8 @@ TIME_ZONE = 'Asia/Tokyo'
 ## Dockerfileを編集
 
 ```
+#Dockerfile
+
 # python:3.8の公式 image をベースの image として設定
 FROM python:3.8
 
@@ -71,6 +79,8 @@ python manage.py runserver 0.0.0.0:8000
 requirements.txtに以下を記述する。
 
 ```
+#requirements.txt
+
 Django==3.1
 django-environ==0.8.1
 ```
@@ -80,6 +90,8 @@ Dockerfile を用意した後に docker build -t [作成する image 名] [Docke
 今回は hello-world という名前の image を作成します。
 
 ```
+#ターミナル
+
 docker build -t hello-world .
 ```
 
@@ -88,6 +100,8 @@ docker build -t hello-world .
 image を作成したので、コンテナを起動させます。
 
 ```
+#ターミナル
+
 docker container run -d -p 8000:8000 hello-world
 ```
 
