[add]事前資料の更新

--- a/doc/事前準備/事前準備.md
+++ b/doc/事前準備/事前準備.md
@@ -7,11 +7,9 @@
 ## 事前準備
 
 - Docker
-  - [Dockerインストール Mac用]()
-  - [Dockerインストール Windows用]()
+  - [Dockerインストール Mac用](docker_mac.md)
+  - [Dockerインストール Windows用](docker_win.md)
 - VSCode
   - [VSCodeのインストールと設定](vscode.md)
 - Github
-  - 
-
-
+  - [Githubのインストール](github.md)
