--- a/doc/デプロイ.md
+++ b/doc/デプロイ.md
@@ -1,22 +1,28 @@
 # Azureにデプロイ
 まず、先ほどのロケットの画面の状態をデプロイ。次に表示をHello,World.に変更、それをもう一度デプロイする。
 
-手順
-* ACR作成(Azureで作業)
-* ACRのレジストリにDockerイメージをプッシュ(ローカルで作業)
-* 
-## 
+### 手順の流れ
+* [ACR作成(Azureで作業)](#arc作成)
+* [ACRのレジストリにDockerイメージをプッシュ(ローカルで作業)](#acrのクイックスタートローカルで作業)
+* [AppServiceの作成とデプロイ](#webappを作成azureで作業)
 
+## ARC作成(Azureで作業)
+[https://portal.azure.com/](https://portal.azure.com/)にアクセス。
 
-## ARC作成
-Azure portlで作業する。
-
+「コンテナレジストリ」と検索しコンテナレジストリのページを開く。
+作成を押し、以下の画像のように入力する。
+![arc-make](img/acr-make.png)
 ### ACRの設定
+ローカルPCからACRにログインするために必要な設定を行います。
 
 設定→アクセスキー→管理者ユーザを有効
 
-## ACRのクイックスタート
-ACRのクイックスタートを参照
+<img src="img/acr-setting.png" alt="acr-setting" width="900" height="600">
+
+## ACRのクイックスタート(ローカルで作業)
+作成したコンテナレジストリのクイックスタートのコマンドを使用すると簡単にできます。(**3.ログイン**と**4.プッシュ**のコマンドを使用します)
+<img src="img/acr-login.png" alt="acr-loning" width="900" height="600">
+
 ### 1.ACRにログイン
 usernameとpwは、ARCのアクセスキー使用(ARC作成で設定したやつ)
 
@@ -26,22 +32,22 @@ docker login レジストリ名.azurecr.io
 ### 2.レジストリにプッシュ
 まず、イメージの前にレジストリ ログイン URI を付加し、プライベート レジストリにプッシュできるようにしましょう。
 
-1 つ目のコマンドはレジストリにアップロードするためにイメージにタグを付け、2 つ目のコマンドはイメージをプッシュします。
+レジストリにアップロードするためにイメージにタグを付け、イメージをプッシュします。
 
 ```
 docker tag hello-world レジストリ名.azurecr.io/hello-world
 docker push レジストリ名.azurecr.io/hello-world
 ```
 
-## Webappを作成
+## Webappを作成(Azureで作業)
+![webapp-make](img/webapp-make.png)
+![webapp-docker](img/webapp-docker.png)
 
-
+確認および作成のポタンを推し作成する。
 ## デプロイ完了
-
-
-
-
-
+デプロイが完了すると、webappに移動します。
+<img src="img/webapp-url.png" alt="acr-loning" width="900" height="600">
+<img src="img/django-rocket.png" alt="acr-loning" width="900" height="600">
 
 
 
