docs:Postgre使用の為,requirements.txtにpsycopg2を追加

--- a/doc/環境構築.md
+++ b/doc/環境構築.md
@@ -81,8 +81,12 @@ requirements.txtに以下を記述する。
 ```
 #requirements.txt
 
+asgiref==3.2.10
 Django==3.1
 django-environ==0.8.1
+psycopg2==2.9.3
+pytz==2022.1
+sqlparse==0.4.2
 ```
 
 ## Dockerfileからイメージの作成
