docs: 見た目の修正

--- a/doc/デプロイ.md
+++ b/doc/デプロイ.md
@@ -1,5 +1,5 @@
 # Azureにデプロイ
-まず、先ほどのロケットの画面の状態をデプロイ。次に表示をHello,World.に変更、それをもう一度デプロイする。
+まず、先ほどのロケットの画面の状態をデプロイ。次に、表示をHello,World.に変更、それをもう一度デプロイします。
 
 ### 手順の流れ
 * [ACR作成(Azureで作業)](#arc作成)
@@ -16,15 +16,14 @@
 ローカルPCからACRにログインするために必要な設定を行います。
 
 設定→アクセスキー→管理者ユーザを有効
-
-<img src="img/acr-setting.png" alt="acr-setting" width="900" height="600">
+![acr-setting](img/acr-setting.png)
 
 ## ACRのクイックスタート(ローカルで作業)
 作成したコンテナレジストリのクイックスタートのコマンドを使用すると簡単にできます。(**3.ログイン**と**4.プッシュ**のコマンドを使用します)
-<img src="img/acr-login.png" alt="acr-loning" width="900" height="600">
+![acr-login](img/acr-login.png)
 
 ### 1.ACRにログイン
-usernameとpwは、ARCのアクセスキー使用(ARC作成で設定したやつ)
+usernameとpwは、ARCのアクセスキー使用 (ARC作成で設定したもの)
 
 ```
 docker login レジストリ名.azurecr.io
@@ -46,10 +45,8 @@ docker push レジストリ名.azurecr.io/hello-world
 確認および作成のポタンを推し作成する。
 ## デプロイ完了
 デプロイが完了すると、webappに移動します。
-<img src="img/webapp-url.png" alt="acr-loning" width="900" height="600">
-<img src="img/django-rocket.png" alt="acr-loning" width="900" height="600">
-
-
+![webapp-url](img/webapp-url.png)
+![django-rocket](img/django-rocket.png)
 
 
 
