docs: 見た目の変更

--- a/doc/デプロイ.md
+++ b/doc/デプロイ.md
@@ -10,16 +10,18 @@
 [https://portal.azure.com/](https://portal.azure.com/)にアクセス。
 
 「コンテナレジストリ」と検索しコンテナレジストリのページを開く。
-作成を押し、以下の画像のように入力する。
+「作成」を押し、以下の画像のように入力する。
 ![arc-make](img/acr-make.png)
 ### ACRの設定
 ローカルPCからACRにログインするために必要な設定を行います。
 
 設定→アクセスキー→管理者ユーザを有効
+
 ![acr-setting](img/acr-setting.png)
 
 ## ACRのクイックスタート(ローカルで作業)
-作成したコンテナレジストリのクイックスタートのコマンドを使用すると簡単にできます。(**3.ログイン**と**4.プッシュ**のコマンドを使用します)
+作成したコンテナレジストリのクイックスタートのコマンドを使用すると簡単にできます。<br>(**3.ログイン**と**4.プッシュ**のコマンドを使用します)
+
 ![acr-login](img/acr-login.png)
 
 ### 1.ACRにログイン
@@ -39,13 +41,17 @@ docker push レジストリ名.azurecr.io/hello-world
 ```
 
 ## Webappを作成(Azureで作業)
+
 ![webapp-make](img/webapp-make.png)
+
 ![webapp-docker](img/webapp-docker.png)
 
 確認および作成のポタンを推し作成する。
 ## デプロイ完了
 デプロイが完了すると、webappに移動します。
+
 ![webapp-url](img/webapp-url.png)
+
 ![django-rocket](img/django-rocket.png)
 
 
