docs: 細かい修正

--- a/doc/環境構築.md
+++ b/doc/環境構築.md
@@ -1,13 +1,11 @@
 [READMEに戻る](../README.md)
 # 環境構築(Djangoのロケット飛ばす所まで)
 ## Githubからコードをcloneする
-デスクトップに移動する。
+ターミナルでデスクトップに移動し、リポジトリをローカルPCにクローンします。
 
-ターミナルを開き以下のコマンドを入力。 【クローンするディレクトリに注意】
+ターミナルで以下のコマンドを実行してください。 【クローンするディレクトリに注意】
 
 ```
-#ターミナル
-
 cd Desktop
 git clone 
 ```
@@ -15,9 +13,9 @@ git clone
 ## VSCodeを開く
 クローンしたフォルダに移動し、VSCodeで開く。
 
-```
-#ターミナル
+ターミナルで以下のコマンドを実行してください。
 
+```
 cd hol-todo-app-on-azure
 code .
 ```
@@ -26,8 +24,6 @@ code .
 settings.pyを以下に書き換える
 
 ```
-#./todoProject/settings.py
-
 ALLOWED_HOSTS = ['*']
  :
 LANGUAGE_CODE = 'ja'
@@ -68,7 +64,7 @@ ENTRYPOINT ["./startup.sh"]
 ```
 
 ## .shファイルを編集
-.shファイルに以下を記述する。
+.shファイルに以下を記述する。(#!/bin/bash も記述してください)
 
 ```
 #!/bin/bash
@@ -79,8 +75,6 @@ python manage.py runserver 0.0.0.0:8000
 requirements.txtに以下を記述する。
 
 ```
-#requirements.txt
-
 asgiref==3.2.10
 Django==3.1
 django-environ==0.8.1
@@ -93,9 +87,9 @@ sqlparse==0.4.2
 Dockerfile を用意した後に docker build -t [作成する image 名] [Dockerfileまでの相対パス] コマンドを実行することで image が作成されます。
 今回は hello-world という名前の image を作成します。
 
-```
-#ターミナル
+ターミナルで以下のコマンドを実行してください。
 
+```
 docker build -t hello-world .
 ```
 
@@ -103,9 +97,9 @@ docker build -t hello-world .
 ## コンテナの起動
 image を作成したので、コンテナを起動させます。
 
-```
-#ターミナル
+ターミナルで以下のコマンドを実行してください。
 
+```
 docker container run -d -p 8000:8000 hello-world
 ```
 
