--- a/doc/デプロイ.md
+++ b/doc/デプロイ.md
@@ -6,7 +6,7 @@
 * [ACRのレジストリにDockerイメージをプッシュ(ローカルで作業)](#acrのクイックスタートローカルで作業)
 * [AppServiceの作成とデプロイ](#webappを作成azureで作業)
 
-## ARC作成(Azureで作業)
+## ACR作成(Azureで作業)
 [https://portal.azure.com/](https://portal.azure.com/)にアクセス。
 
 「コンテナレジストリ」と検索しコンテナレジストリのページを開く。
