docs: 細かい修正

--- a/doc/デプロイ.md
+++ b/doc/デプロイ.md
@@ -1,5 +1,5 @@
 # Azureにデプロイ
-まず、先ほどのロケットの画面の状態をデプロイ。次に、表示をHello,World.に変更、それをもう一度デプロイします。
+まず、ロケットの画面の状態をデプロイします。次に、表示をHello,World.に変更、それをもう一度デプロイします。
 
 ### 手順の流れ
 * [ACR作成(Azureで作業)](#arc作成)
@@ -9,9 +9,11 @@
 ## ACR作成(Azureで作業)
 [https://portal.azure.com/](https://portal.azure.com/)にアクセス。
 
-「コンテナレジストリ」と検索しコンテナレジストリのページを開く。
-「作成」を押し、以下の画像のように入力する。
-![arc-make](img/acr-make.png)
+「コンテナレジストリ」と検索しコンテナレジストリのページを開く。「作成」を押し、以下の画像のように入力する。<br>
+リソースグループは「todo-app」、レジストリ名は任意の文字を入力する。
+
+
+![acr-make](img/acr-make.png)
 ### ACRの設定
 ローカルPCからACRにログインするために必要な設定を行います。
 
