--- a/doc/デプロイ.md
+++ b/doc/デプロイ.md
@@ -9,25 +9,26 @@
 ## ACR作成(Azureで作業)
 [https://portal.azure.com/](https://portal.azure.com/)にアクセス。
 
-「コンテナレジストリ」と検索しコンテナレジストリのページを開く。「作成」を押し、以下の画像のように入力する。<br>
-リソースグループは「todo-app」、レジストリ名は任意の文字を入力する。
+「 **コンテナレジストリ** 」と検索しコンテナレジストリのページを開く。「 **作成** 」を押し、以下の画像のように入力する。<br>
+リソースグループは「 **todo-app** 」(他の文字でも可)、レジストリ名は **任意の文字** を入力する。
 
 
 ![acr-make](img/acr-make.png)
 ### ACRの設定
-ローカルPCからACRにログインするために必要な設定を行います。
+ローカルPCから **ACRにログインするために必要な設定** を行います。
 
-設定→アクセスキー→管理者ユーザを有効
+**設定** → **アクセスキー** → **管理者ユーザを有効**
 
 ![acr-setting](img/acr-setting.png)
 
 ## ACRのクイックスタート(ローカルで作業)
-作成したコンテナレジストリのクイックスタートのコマンドを使用すると簡単にできます。<br>(**3.ログイン**と**4.プッシュ**のコマンドを使用します)
+作成したコンテナレジストリの **クイックスタート** のページを開きます。<br>クイックスタートのコマンドは自分のコンテナレジストリの名前になっているので、 **コピー&ペーストで簡単に実行できます** 。<br>(**3.ログイン**と**4.プッシュ**のコマンドを使用します)
 
 ![acr-login](img/acr-login.png)
 
 ### 1.ACRにログイン
-usernameとpwは、ARCのアクセスキー使用 (ARC作成で設定したもの)
+以下のコマンドを実行して **ACRにログイン** をします。上手くいくと **username** と **password** が求められます。<br>
+**username** と **password** は、[ARCのアクセスキーのもの](#acrの設定)を使用して下さい (ARC作成時に有効に設定したもの)
 
 ```
 docker login レジストリ名.azurecr.io
