docs.アプリ作成手順の更新

--- a/doc/アプリ作成.md
+++ b/doc/アプリ作成.md
@@ -1,6 +1,259 @@
 # ToDoアプリ作成
+
+### 初期設定
+setting.pyを以下のように変更してください。
+```
+ALLOWED_HOSTS = ['*']
+
+LANGUAGE_CODE = 'ja'
+
+TIME_ZONE = 'Asia/Tokyo'
+```
+
+## Todoアプリケーションの作成
+### 1.todoアプリケーションを作成するため、以下のコマンドを実行してください。
+```
+$ python3 manage.py startapp todo
+```
+
+### 2.Todoアプリケーションの組み込み設定
+mysite/settings.pyを編集し、INSTALLED_APPSと書かれている部分に「'django.contrib.admin',」を以下のように追加してください。
+```
+INSTALLED_APPS = [
+    'django.contrib.admin',
+	...
+	...
+	...
+	...
+    'todo.apps.TodoConfig', #todoアプリケーションの組み込み
+]
+```
+
+### 3.Todoアプリケーションのモデル作成
+シンプルなTodoアプリを作成するため、models.pyに「Todo」「作成日時」「更新日時」の項目を用意します。シンプルなコードは以下の通りです。
+```
+from django.db import models 
+
+
+class Todo(models.Model): 
+    todo = models.CharField('ToDo', max_length=100, blank=False)
+    created_at = models.DateTimeField('作成日時', auto_now_add=True)
+    updated_at = models.DateTimeField('更新日時',auto_now=True)
+
+    def __str__(self):
+        return self.todo
+```
+
+### 4.Todoアプリケーションのフォーム作成
+Todoアプリケーションのフォームを作成します。入力項目をToDoのみにするため、forms.pyに以下のコードの追加をお願いします。
+```
+from django import forms
+from .models import Todo
+
+class TodoForm(forms.ModelForm):
+    class Meta:
+        model = Todo
+        exclude = ('created_at','updated_at',)  #入力項目から作成日時、更新日時を除外
+```
+
+### 5.Todoアプリケーションのビュー作成
+```
+from django.views import generic
+from django.urls import reverse_lazy
+from .models import Todo
+from .forms import TodoForm
+
+# ToDoの一覧表示機能
+class TodoListView(generic.ListView):
+    model = Todo
+    paginate_by = 5
+
+# ToDoの詳細表示機能
+class TodoDetailView(generic.DetailView):
+    model = Todo
+
+# ToDoの作成機能
+class TodoCreateView(generic.CreateView):
+    model = Todo
+    form_class = TodoForm
+    success_url = reverse_lazy('todo:list')
+
+# ToDoの編集機能
+class TodoUpdateView(generic.UpdateView):
+    model = Todo
+    form_class = TodoForm
+    success_url = reverse_lazy('todo:list')
+
+# ToDoの削除機能
+class TodoDeleteView(generic.DeleteView):
+    model = Todo
+    success_url = reverse_lazy('todo:list')
+
+```
+
+### 6.TodoアプリケーションのURLを設定
+TodoアプリケーションのURL設定を行います。todo/でアクセスされた際にtodoアプリケーションのURL設定を参照するように以下のように記載します。
+↓ mysite/urls.py
+```
+from django.contrib import admin
+from django.urls import include, path   # includeをimport
+
+urlpatterns = [
+    path('todo/', include('todo.urls')),    # todo/でアクセスした際はtodoのurl設定を参照させる
+    path('admin/', admin.site.urls),
+]
+```
+↓ Todo/urls.py
+```
+from django.urls import path
+from . import views 
+
+app_name = 'todo' 
+
+urlpatterns = [
+    path('list/', views.TodoListView.as_view(), name='list'), 
+    path('detail/<int:pk>/', views.TodoDetailView.as_view(), name='detail'), 
+    path('create/', views.TodoCreateView.as_view(), name='create'), 
+    path('update/<int:pk>/', views.TodoUpdateView.as_view(), name='update'), 
+    path('delete/<int:pk>/', views.TodoDeleteView.as_view(), name='delete'), 
+]
+```
+
+### 7.Todoアプリケーションのテンプレート作成
+Todo/templates/base.htmlにhtmlのベースとなるテンプレートを作成します。
+```
+{% load static %}
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+    <meta charset="utf-8">
+</head>
+<body>
+    {% block content %}
+    {% endblock %}
+</body>
+</html>
+```
+
+Todoの一覧表示機能のための以下のコードをtodo/templates/todo/todo_list.htmlに追加お願いします。
+```
+{% extends 'base.html' %}
+
+{% block content %}
+<h1>ToDoの一覧</h1>
+<a href="{% url 'todo:create' %}">追加</a>
+<table>
+  <thead>
+    <tr>
+      <th scope="col">ID</th>
+      <th scope="col">ToDo</th>
+      <th scope="col">作成日時</th>
+      <th scope="col">更新日時</th>
+      <th scope="col">操作</th>
+    </tr>
+  </thead>
+  <tbody>
+    {% for item in object_list %}
+    <tr>
+      <td scope="row"><a href="{% url 'todo:detail' pk=item.id %}">{{ item.id }}</a></td>
+      <td>{{ item.todo }}</td>
+      <td>{{ item.created_at }}</td>
+      <td>{{ item.updated_at }}</td>
+      <td>
+        <a href="{% url 'todo:update' pk=item.id %}">修正</a>
+        <a href="{% url 'todo:delete' pk=item.id %}">削除</a>
+      </td>
+    </tr>
+    {% endfor %}
+  </tbody>
+</table>
+{%endblock%}
+```
+
+### 8.Todoの詳細を表示させる
+Todoの詳細を表示させるコードとして以下のコードをtodo/templates/todo/todo_detail.htmlに追加してください。
+```
+{% extends 'base.html' %}
+
+{% block content %}
+<h1>ToDoの詳細</h1>
+<table>
+    <tr>
+        <th>ID</th>
+        <td>{{ object.id }}</td>
+    </tr>
+    <tr>
+        <th>ToDo</th>
+        <td>{{ object.todo }}</td>
+    </tr>
+    <tr>
+        <th>作成日時</th>
+        <td>{{ object.created_at }}</td>
+    </tr>
+    <tr>
+        <th>更新日時</th>
+        <td>{{ object.updated_at }}</td>
+    </tr>
+</table>
+<a href="{% url 'todo:list' %}">戻る</a>
+{%endblock%}
+```
+### 9.Todoの作成機能とTodoの編集機能の実装
+Todoの作成機能とTodoの編集機能を実装するため、todo/templates/todo/todo_form.htmlに以下のコードを追加お願いします。
+```
+{% extends 'base.html' %}
+
+{% block content %}
+
+{% if object %}
+<h1>ToDoの編集</h1>
+{% else %}
+<h1>ToDoの作成</h1>
+{% endif %}
+
+<form method="post">
+    {% csrf_token %}
+    {{ form }} 
+    <button type="submit">送信</button>
+</form>
+<a href="{% url 'todo:list' %}">戻る</a>
+{%endblock%}
+```
+### 10.Todoの削除機能実装
+Todoの削除のためにtodo/templates/todo/todo_confirm_delete.htmlに以下のコードの追加をお願いします。
+```
+{% extends 'base.html' %}
+
+{% block content %}
+<h1>ToDoの削除</h1>
+<table>
+    <tr>
+        <th>ID</th>
+        <td>{{ object.id }}</td>
+    </tr>
+    <tr>
+        <th>ToDo</th>
+        <td>{{ object.todo }}</td>
+    </tr>
+    <tr>
+        <th>作成日時</th>
+        <td>{{ object.created_at }}</td>
+    </tr>
+    <tr>
+        <th>更新日時</th>
+        <td>{{ object.updated_at }}</td>
+    </tr>
+</table>
+<form action="" method="post">
+    {% csrf_token %}
+    <input type="submit"value="削除" />
+</form>
+<a href="{% url 'todo:list' %}">戻る</a>
+{%endblock%}
+```
+
 ### 参考サイト
-[これです](https://qiita.com/acecrc/items/a4302ca6cf0897c45302)
-[Django の開発環境の Dockerfile を作成してみた](https://qiita.com/sugurutakahashi12345/items/6d68e6bb9163961a8d4d)
-[Django で Hello World（初心者）](https://qiita.com/sugurutakahashi12345/items/d4377a16c0e42cf48287)
-[Azure Web App for Containers で Azure Container Registry と連携したお手軽 CI/CD を試してみた](https://qiita.com/mnrst/items/d19d39b30592c9250542)
+[これです](https://qiita.com/acecrc/items/a4302ca6cf0897c45302)<br>
+[Django の開発環境の Dockerfile を作成してみた](https://qiita.com/sugurutakahashi12345/items/6d68e6bb9163961a8d4d)<br>
+[Django で Hello World（初心者）](https://qiita.com/sugurutakahashi12345/items/d4377a16c0e42cf48287)<br>
+[Azure Web App for Containers で Azure Container Registry と連携したお手軽 CI/CD を試してみた](https://qiita.com/mnrst/items/d19d39b30592c9250542)<br>
