docs.アプリ作成手順更新

--- a/doc/アプリ作成.md
+++ b/doc/アプリ作成.md
@@ -57,6 +57,7 @@ class TodoForm(forms.ModelForm):
 ```
 
 ### 5.Todoアプリケーションのビュー作成
+todo/views.pyに以下のコードを追加してください。
 ```
 from django.views import generic
 from django.urls import reverse_lazy
