--- a/doc/デプロイ.md
+++ b/doc/デプロイ.md
@@ -1,17 +1,16 @@
-# Azureにデプロイ
-まず、ロケットの画面の状態をデプロイします。次に、表示をHello,World.に変更、それをもう一度デプロイします。
+#  デプロイ
+* AzureのACRでレジストリを作成し、Dockerイメージのプッシュ
+* AzureのApp Service for Containerを作成し、デプロイ
+* 表示をロケットから、Hello Worldへ変更
 
-### 手順の流れ
-* [ACR作成(Azureで作業)](#arc作成)
-* [ACRのレジストリにDockerイメージをプッシュ(ローカルで作業)](#acrのクイックスタートローカルで作業)
-* [AppServiceの作成とデプロイ](#webappを作成azureで作業)
 
-## ACR作成(Azureで作業)
+----
+
+# Azure Container Registory作成
 [https://portal.azure.com/](https://portal.azure.com/)にアクセス。
 
 「 **コンテナレジストリ** 」と検索しコンテナレジストリのページを開く。「 **作成** 」を押し、以下の画像のように入力する。<br>
 リソースグループは「 **todo-app** 」(他の文字でも可)、レジストリ名は **任意の文字** を入力する。
-
 
 ![acr-make](img/acr-make.png)
 ### ACRの設定
@@ -25,23 +24,194 @@
 作成したコンテナレジストリの **クイックスタート** のページを開きます。<br>クイックスタートのコマンドは自分のコンテナレジストリの名前になっているので、 **コピー&ペーストで簡単に実行できます** 。<br>(**3.ログイン**と**4.プッシュ**のコマンドを使用します)
 
 ![acr-login](img/acr-login.png)
-
-### 1.ACRにログイン
-以下のコマンドを実行して **ACRにログイン** をします。上手くいくと **username** と **password** が求められます。<br>
-**username** と **password** は、[ARCのアクセスキーのもの](#acrの設定)を使用して下さい (ARC作成時に有効に設定したもの)
+## ローカルでDockerイメージ作成 &レジストリログイン &プッシュ
+「hello-world」という**タグ**をつけてビルドを実行し、dockerイメージを作成。
 
 ```
-docker login レジストリ名.azurecr.io
+docker build -t hello-world . 
 ```
-### 2.レジストリにプッシュ
-まず、イメージの前にレジストリ ログイン URI を付加し、プライベート レジストリにプッシュできるようにしましょう。
 
-レジストリにアップロードするためにイメージにタグを付け、イメージをプッシュします。
+コンテナレジストリにログイン
+```
+docker login hosinotodo.azurecr.io
+```
 
+レジストリにプッシュする
 ```
 docker tag hello-world レジストリ名.azurecr.io/hello-world
 docker push レジストリ名.azurecr.io/hello-world
 ```
+
+
+## リポジトリ確認
+Azureの ホーム > コンテナレジストリ > レジストリ名  に移動
+
+リポジトリに自分のイメージがプッシュされているか確認する。
+
+----
+
+# App Serviceの作成
+Azureで、リソースの作成→Webアプリ 作成
+
+リソースグループはコンテナレジストリと同じものを使用。公開 は、Dockerコンテナーを選択しましょう。
+
+Dockerに移動し、先ほどプッシュしたイメージを選択。
+
+## 環境変数の設定
+
+App Serviceの構成→「新しいアプリケーションの設定」に、docker-compose.ymlに書かれている SECRET_KEY を設定します。
+
+## 確認
+起動するまでに少し時間がかかりますが、これでデプロイ先でもロケット打ち上げ成功です。
+
+----
+
+# Hello world
+次に、ロケットの画面ではなく、「Helloworld」と表示されるように変更します。
+
+apps.pyに記述された、アプリ名をsettings.pyに登録します。
+
+↓アプリ/apps.py
+```
+name = 'アプリ名'
+```
+
+↓プロジェクト/settings.py
+```
+INSTALLED_APPS = [
+    'django.contrib.admin',
+    'django.contrib.auth',
+    'django.contrib.contenttypes',
+    'django.contrib.sessions',
+    'django.contrib.messages',
+    'django.contrib.staticfiles',
+    #追加
+    'アプリ名',
+]
+```
+
+
+## ルーティングの設定１
+次にルーティングの設定を行います。
+サーバにアクセスされた時にアプリのurls.pyを使用する設定を記入します。
+
+プロジェクト/urls.py
+```
+from django.contrib import admin
+from django.urls import path, include # include 追加
+
+urlpatterns = [
+    path('admin/', admin.site.urls),
+    # 追加
+    path('', include('アプリ名.urls')),
+]
+```
+
+## ルーティングの設定２
+サーバにアクセス→プロジェクトのurls→アプリのurls の流れですが、アプリのurlsが無いので新規作成します。
+
+↓コマンドでファイルを新規作成。GUIで作成してもOKです。
+```
+touch アプリ名/urls.py
+```
+
+## ルーティングの設定３
+サーバに、https://サーバドメイン/hello のアクセスが来たら
+
+views.pyのindex()関数を呼び出すように設定します。
+
+↓アプリ名/urls.py
+```
+from django.urls import path
+
+from . import views
+
+urlpatterns = [
+    path('hello', views.index),
+]
+```
+
+## viewsの関数を作成
+views.pyにindex())関数の処理を記述します。
+
+↓アプリ名/viwes.py
+```
+from django.shortcuts import render
+from django.http import HttpResponse
+
+def index(request):
+    return HttpResponse('Hello World')
+```
+
+
+## 動作確認
+変更を確認してみましょう。
+
+```
+docker compose up
+```
+を実行し、[localhost:8000/hello](http://localhost:8000/hello)にアクセス。
+
+「Hello World」と表示できたら成功です。
+
+## 再デプロイ
+では、もう一度デプロイをしてみましょう。 ※hello-world-2 に注意
+```
+docker build -t hello-world .
+docker tag hello-world レジストリ名.azurecr.io/hello-world-2
+docker push レジストリ名.azurecr.io/hello-world-2
+```
+今回は、前回からの差分のみプッシュされるので、すぐに終わります。
+
+先ほど作成した、App Serviceに移動します。
+
+デプロイセンターに移動し、イメージで「hello-world-2」を選択し、**保存**します。
+
+設定が保存されると再デプロイされます。デプロイするのに時間がかかります。
+
+デプロイが終わると、https://サーバドメイン/hello にアクセスし、「Hello World」と表示されたら成功です。
+
+
+## 次へ
+次はCI/CIです。
+
+ブランチを切り替えて、次の資料に進みましょう。
+```
+git add .
+git commit -m "deploy done"
+git push
+git checkout -b CI/CD
+```
+
+[CI/CDの資料](https://github.com/takatoshiinaoka/hosino-todo/tree/CI/CD)
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+----
+
+----
+
+
+### 手順の流れ
 
 ## Webappを作成(Azureで作業)
 
@@ -58,9 +228,4 @@ docker push レジストリ名.azurecr.io/hello-world
 ![django-rocket](img/django-rocket.png)
 
 
-
-## 参考サイト
-* [Azure App Service を使ってコンテナー化された Web アプリをデプロイして実行する](https://docs.microsoft.com/ja-jp/learn/modules/deploy-run-container-app-service/)
-* [コンテナのGithub Actions](https://docs.microsoft.com/ja-jp/azure/app-service/deploy-container-github-action?tabs=service-principal)
-* [AzureにDjangoで作ったwebアプリのContainerをデプロイしてみる](https://zenn.dev/ibaraki/scraps/a7b7fd0592e228)
 
