--- a/doc/環境構築.md
+++ b/doc/環境構築.md
@@ -1,5 +1,5 @@
 [READMEに戻る](../README.md)
-# 環境構築(Djangoのロケット飛ばす所まで)
+# 環境構築
 ## Githubからコードをcloneする
 ターミナルでデスクトップに移動し、リポジトリをローカルPCにクローンします。
 
@@ -7,7 +7,7 @@
 
 ```
 cd Desktop
-git clone 
+git clone リポジトリのURL
 ```
 
 ## VSCodeを開く
@@ -20,94 +20,118 @@ cd hol-todo-app-on-azure
 code .
 ```
 
-## settings.pyを書き換える
-settings.pyを以下に書き換える
+## ブランチの切り替え
+今回は、環境構築、デプロイ、CI/CD、ToDoアプリ作成の単位でブランチを切り替えます。
 
+ターミナルを開き、以下のコマンドでmkenv(make env:環境構築)のブランチを作成し移動します。
+```
+git checkout -b mkenv
+```
+
+----
+
+## プロジェクト&アプリ作成
+
+* Djangoプロジェクト作成
+* Djangoアプリ作成
+
+
+以下のコマンドでpythonイメージから作成されたコンテナでDjangoのプロジェクトを作成します。
+```
+docker compose run web django-admin.py startproject hosinoproject .
+```
+以下のコマンドでDjangoのアプリを作成します。
+```
+docker compose run web django-admin.py startapp hosinoapp 
+```
+----
+
+## シェルスクリプト実行権限付与
+docker-compose.ymlがstartup.shを実行できるように権限を付与します。
+```
+chmod +x startup.sh 
+```
+
+----
+## 環境変数の設定
+SECRET_KEYは公開してはいけないので環境変数を使います。
+
+**settings.py** の SECRET_KEY を **docker-compose.yml** の SECRET_KEY に記述します。
+
+↓docker-compose.yml
+```
+environment:
+      - SECRET_KEY= ここにsettings.pyに書いてあるSECRET_KEYを記述
+```
+
+↓settings.py
+```
+import environ
+import os
+
+env = environ.Env()
+env.read_env(os.path.join('.env'))
+:
+SECRET_KEY = env('SECRET_KEY')
+```
+
+## docker-compose.ymlをGit管理から外す
+.gitignoreの1番下に書かれている「docker-compose.yml」のコメントを外します。
+
+※docker-compose.ymlはSECRET_KEYが書かれており、公開してはいけません。
+
+↓.gitignore
+```
+docker-compose.yml
+```
+
+----
+
+## プロジェクトの設定を変更
+ホストヘッダー攻撃対策で、ALLOWED_HOSTSにはWebサービスを提供するドメイン名を指定する必要があります。ついでに言語とタイムゾーンも指定。
 ```
 ALLOWED_HOSTS = ['*']
- :
+:
 LANGUAGE_CODE = 'ja'
 TIME_ZONE = 'Asia/Tokyo'
 ```
 
-## Dockerfileを編集
+## サーバ起動用スクリプト
+Django サーバを起動するためにDockerfileのコメントアウトを外します。shファイルにはサーバを起動するコマンドが書かれています。
 
+
+↓Dockerfile
 ```
-#Dockerfile
-
-# python:3.8の公式 image をベースの image として設定
-FROM python:3.8
-
-# コンテナの8000番ポートを公開
-EXPOSE 8000
-
-# 作業ディレクトリの作成
-RUN mkdir /code
-
-# 作業ディレクトリの設定
-WORKDIR /code
-
-# カレントディレクトリにある資産をコンテナ上の指定のディレクトリにコピーする
-ADD . /code
-
-# pipでrequirements.txtに指定されているパッケージを追加する
-RUN pip install -r requirements.txt
-
-# マイグレート
-RUN python manage.py migrate
-
-# シェルファイルへのアクセス権限
 RUN chmod 744 ./startup.sh
-
-# 起動コマンドが書かれたシェルファイルを実行
 ENTRYPOINT ["./startup.sh"]
 ```
 
-## .shファイルを編集
-.shファイルに以下を記述する。(#!/bin/bash も記述してください)
-
+## ロケット打ち上げ
+以下のコマンドを実行し、ロケットが打ち上がったら成功です。
 ```
-#!/bin/bash
-python manage.py runserver 0.0.0.0:8000
-```
-
-## requirements.txtを編集
-requirements.txtに以下を記述する。
-
-```
-asgiref==3.2.10
-Django==3.1
-django-environ==0.8.1
-psycopg2==2.9.3
-pytz==2022.1
-sqlparse==0.4.2
+docker compose build 
+docker compose up
 ```
 
-## Dockerfileからイメージの作成
-Dockerfile を用意した後に docker build -t [作成する image 名] [Dockerfileまでの相対パス] コマンドを実行することで image が作成されます。
-今回は hello-world という名前の image を作成します。
-
-ターミナルで以下のコマンドを実行してください。
-
+サーバ停止： control + c
 ```
-docker build -t hello-world .
+docker compose down
 ```
 
 
-## コンテナの起動
-image を作成したので、コンテナを起動させます。
+----
+# 次へ
+次はデプロイです。
 
-ターミナルで以下のコマンドを実行してください。
-
+ブランチを切り替えて、次へ進みましょう。
 ```
-docker container run -d -p 8000:8000 hello-world
+git add .
+git commit -m "mkenv done"
+git push
+git checkout -b deploy
 ```
 
-[http://localhost:8000](http://localhost:8000)にアクセスするとロケットが飛ぶ
-
-### 参考サイト
-[Django の開発環境の Dockerfile を作成してみた](https://qiita.com/sugurutakahashi12345/items/6d68e6bb9163961a8d4d)
-
+[デプロイの資料](https://github.com/takatoshiinaoka/hosino-todo/tree/%E3%83%87%E3%83%97%E3%83%AD%E3%82%A4)
 
 
 
