--- a/doc/環境構築.md
+++ b/doc/環境構築.md
@@ -60,22 +60,22 @@ services:
 
 * Djangoプロジェクト作成
 * Djangoアプリ作成
-
-
-以下のコマンドでpythonイメージから作成されたコンテナでDjangoのプロジェクトを作成します。
-```
-docker compose run web django-admin.py startproject hosinoproject .
-```
-以下のコマンドでDjangoのアプリを作成します。
-```
-docker compose run web django-admin.py startapp hosinoapp 
-```
 ----
 
 ## シェルスクリプト実行権限付与
 docker-compose.ymlがstartup.shを実行できるように権限を付与します。
 ```
 chmod +x startup.sh 
+```
+----
+
+以下のコマンドでpythonイメージから作成されたコンテナでDjangoのプロジェクトを作成します。
+```
+docker compose run web django-admin.py startproject todoproject .
+```
+以下のコマンドでDjangoのアプリを作成します。
+```
+docker compose run web django-admin.py startapp todoapp 
 ```
 
 ----
