--- a/doc/環境構築.md
+++ b/doc/環境構築.md
@@ -61,7 +61,8 @@ services:
 * Djangoプロジェクト作成
 * Djangoアプリ作成
 ----
-
+## Docker起動
+dockerのアプリを起動します。
 ## シェルスクリプト実行権限付与
 docker-compose.ymlがstartup.shを実行できるように権限を付与します。
 ```
