--- a/doc/デプロイ.md
+++ b/doc/デプロイ.md
@@ -21,26 +21,22 @@
 ![acr-setting](img/acr-setting.png)
 
 ## ACRのクイックスタート(ローカルで作業)
-作成したコンテナレジストリの **クイックスタート** のページを開きます。<br>クイックスタートのコマンドは自分のコンテナレジストリの名前になっているので、 **コピー&ペーストで簡単に実行できます** 。<br>(**3.ログイン**と**4.プッシュ**のコマンドを使用します)
 
-![acr-login](img/acr-login.png)
-## ローカルでDockerイメージ作成 &レジストリログイン &プッシュ
-「hello-world」という**タグ**をつけてビルドを実行し、dockerイメージを作成。
+
+### ビルドしてイメージを作成
 
 ```
 docker build -t hello-world . 
 ```
 
-コンテナレジストリにログイン
-```
-docker login hosinotodo.azurecr.io
-```
+### AECログイン&イメージのプッシュ
+作成したコンテナレジストリの **クイックスタート** のページを開きます。<br>クイックスタートのコマンドは自分のコンテナレジストリの名前になっているので、 **コピー&ペーストで簡単に実行できます** 。<br>(**3.ログイン**と**4.プッシュ**のコマンドを使用します)
+![acr-login](img/acr-login.png)
+## ローカルでDockerイメージ作成 &レジストリログイン &プッシュ
+「hello-world」という**タグ**をつけてビルドを実行し、dockerイメージを作成。
 
-レジストリにプッシュする
-```
-docker tag hello-world レジストリ名.azurecr.io/hello-world
-docker push レジストリ名.azurecr.io/hello-world
-```
+
+
 
 
 ## リポジトリ確認
