--- a/doc/デプロイ.md
+++ b/doc/デプロイ.md
@@ -47,11 +47,24 @@ Azureの ホーム > コンテナレジストリ > レジストリ名  に移動
 ----
 
 # App Serviceの作成
-Azureで、リソースの作成→Webアプリ 作成
+Azureで、リソースの作成→Webアプリ→作成
 
-リソースグループはコンテナレジストリと同じものを使用。公開 は、Dockerコンテナーを選択しましょう。
+* リソースグループ： todoapp(ACRと同じもの)
+* webアプリ名：　任意の名前
+* 公開：　Dockerコンテナー
+* os: Linux
+* 地域：　Japan East
+* Linuxプラン：　　新規作成→プラン名「F1」
+* SKUとサイズ: 「開発/テスト」の「無料のもの」を選択
 
-Dockerに移動し、先ほどプッシュしたイメージを選択。
+Dockerへ
+* オプション：単一コンテナー
+* イメージソース：　Azire Container Registry
+* レジストリ：　先ほど作成したもの
+* イメージ： hello-world
+* タグ： latest
+
+作成をクリック
 
 ## 環境変数の設定
 
