--- a/doc/デプロイ.md
+++ b/doc/デプロイ.md
@@ -68,9 +68,11 @@ Dockerへ
 
 ## 環境変数の設定
 
-App Serviceの構成→「新しいアプリケーションの設定」に、docker-compose.ymlに書かれている SECRET_KEY を設定します。
+App Service→「構成」→「新しいアプリケーションの設定」に、docker-compose.ymlに書かれている SECRET_KEY を設定します。<br>
+保存ボタンを押すのを忘れないでください。
 
 ## 確認
+「概要」→「URL」のurlからサイトに移動できます。
 起動するまでに少し時間がかかりますが、これでデプロイ先でもロケット打ち上げ成功です。
 
 ----
