--- a/doc/デプロイ.md
+++ b/doc/デプロイ.md
@@ -192,7 +192,7 @@ git push
 git checkout -b CI/CD
 ```
 
-[CI/CDの資料](https://github.com/takatoshiinaoka/hosino-todo/tree/CI/CD)
+[CI/CDの資料](cicd.md)
 
 
 
