--- a/doc/環境構築.md
+++ b/doc/環境構築.md
@@ -158,7 +158,7 @@ git push
 git checkout -b deploy
 ```
 
-[デプロイの資料](https://github.com/takatoshiinaoka/hosino-todo/tree/%E3%83%87%E3%83%97%E3%83%AD%E3%82%A4)
+[デプロイの資料](デプロイ.md)
 
 
 
