--- a/doc/アプリ作成.md
+++ b/doc/アプリ作成.md
@@ -17,7 +17,7 @@ class Todo(models.Model):
 ```
 
 ### 2.Todoアプリケーションのフォーム作成
-Todoアプリケーションのフォームを作成します。入力項目をToDoのみにするため、forms.pyに以下のコードの追加をお願いします。
+Todoアプリケーションのフォームを作成します。入力項目をToDoのみにするため、todoapp/forms.pyを作成し、forms.pyに以下のコードの追加をお願いします。
 ```
 from django import forms
 from .models import Todo
