--- a/doc/環境構築.md
+++ b/doc/環境構築.md
@@ -1,49 +1,40 @@
 [READMEに戻る](../README.md)
 # 環境構築
+## GithubでこのリポジトリをForkする
+右上↗️の「Form」を押します。<br>
+左上↖️のリポジトリ名が、「自分の名前/hol-todo-app-on-azure」と表示されていたらOKです。
 ## Githubからコードをcloneする
-ターミナルでデスクトップに移動し、リポジトリをローカルPCにクローンします。
-
-ターミナルで以下のコマンドを実行してください。 【クローンするディレクトリに注意】
+まず、ターミナルを開きます。<br>
+次に、リポジトリをローカルPCにクローンします。 【クローンするディレクトリに注意してください】
 
 ```
-cd Desktop
-git clone リポジトリのURL
+git clone 自分のリポジトリのURL
 ```
-
+クローンできたか以下のコマンドで確認します。
+```
+ls
+```
+「hol-todo-app-on-azure」が表示されたらOKです。
 ## VSCodeを開く
-クローンしたフォルダに移動し、VSCodeで開く。
-
-ターミナルで以下のコマンドを実行してください。
-
+事前準備でVSCodeの設定をしていれば、以下のコマンドでVSCodeを開くことができます。設定していない人はVSCodeのアプリからクローンしたフォルダを開いてください。
 ```
-cd hol-todo-app-on-azure
-code .
+code hol-todo-app-on-azure
 ```
-
-## ブランチの切り替え
-今回は、環境構築、デプロイ、CI/CD、ToDoアプリ作成の単位でブランチを切り替えます。
-
-ターミナルを開き、以下のコマンドでmkenv(make env:環境構築)のブランチを作成し移動します。
-```
-git checkout -b mkenv
-```
-----
-
-
-----
-
-## プロジェクト&アプリ作成
-
-* Djangoプロジェクト作成
-* Djangoアプリ作成
 ----
 ## Docker起動
 dockerのアプリを起動します。
+
+----
 ## シェルスクリプト実行権限付与
 docker-compose.ymlがstartup.shを実行できるように権限を付与します。
 ```
 chmod +x startup.sh 
 ```
+----
+## プロジェクト&アプリ作成
+
+* Djangoプロジェクト作成
+* Djangoアプリ作成
 ----
 
 以下のコマンドでpythonイメージから作成されたコンテナでDjangoのプロジェクトを作成します。
@@ -54,7 +45,6 @@ docker compose run web django-admin.py startproject todoproject .
 ```
 docker compose run web django-admin.py startapp todoapp 
 ```
-
 ----
 ## 環境変数の設定
 SECRET_KEYは公開してはいけないので環境変数を使います。
@@ -76,16 +66,6 @@ env = environ.Env()
 env.read_env(os.path.join('.env'))
 :
 SECRET_KEY = env('SECRET_KEY')
-```
-
-## docker-compose.ymlをGit管理から外す
-.gitignoreの1番下に書かれている「docker-compose.yml」のコメントを外します。
-
-※docker-compose.ymlはSECRET_KEYが書かれており、公開してはいけません。
-
-↓.gitignore
-```
-docker-compose.yml
 ```
 
 ----
