--- a/doc/環境構築.md
+++ b/doc/環境構築.md
@@ -1,7 +1,7 @@
 [READMEに戻る](../README.md)
 # 環境構築
 ## GithubでこのリポジトリをForkする
-右上↗️の「Form」を押します。<br>
+右上↗️の「Fork」を押します。<br>
 左上↖️のリポジトリ名が、「自分の名前/hol-todo-app-on-azure」と表示されていたらOKです。
 ## Githubからコードをcloneする
 まず、ターミナルを開きます。<br>
@@ -10,13 +10,11 @@
 ```
 git clone 自分のリポジトリのURL
 ```
-クローンできたか以下のコマンドで確認します。
-```
-ls
-```
+クローンできたか、「ls」コマンドで確認します。<br>
 「hol-todo-app-on-azure」が表示されたらOKです。
 ## VSCodeを開く
-事前準備でVSCodeの設定をしていれば、以下のコマンドでVSCodeを開くことができます。設定していない人はVSCodeのアプリからクローンしたフォルダを開いてください。
+事前準備でVSCodeの設定をしていれば、以下のコマンドでVSCodeを開くことができます。<br>
+※設定していない人はVSCodeのアプリからクローンしたフォルダを開いてください。
 ```
 code hol-todo-app-on-azure
 ```
