--- a/doc/環境構築.md
+++ b/doc/環境構築.md
@@ -49,13 +49,13 @@ SECRET_KEYは公開してはいけないので環境変数を使います。
 
 **settings.py** の SECRET_KEY を **docker-compose.yml** の SECRET_KEY に記述します。
 
-↓docker-compose.yml
+↓docker-compose.yml のSECRET_KEYを設定
 ```
 environment:
       - SECRET_KEY= ここにsettings.pyに書いてあるSECRET_KEYを記述
 ```
 
-↓settings.py
+↓settings.py に以下を追加
 ```
 import environ
 import os
