--- a/doc/デプロイ.md
+++ b/doc/デプロイ.md
@@ -7,47 +7,40 @@
 ----
 
 # Azure Container Registory作成
-[https://portal.azure.com/](https://portal.azure.com/)にアクセス。
-
-「 **コンテナレジストリ** 」と検索しコンテナレジストリのページを開く。「 **作成** 」を押し、以下の画像のように入力する。<br>
-リソースグループは「 **todo-app** 」(他の文字でも可)、レジストリ名は **任意の文字** を入力する。
-
+[https://portal.azure.com/](https://portal.azure.com/)にアクセス。<br><br>
+「 **コンテナレジストリ** 」と検索しコンテナレジストリのページを開く。<br>
+「 **作成** 」を押し、以下のように入力する。
+* リソースグループ: 「 **todo-app** 」(他の文字でも可)
+* レジストリ名:  **任意の文字** 
+* 場所: 「**Japan East**」
+* SKU: 「**Basic**」
 ![acr-make](img/acr-make.png)
 ### ACRの設定
-ローカルPCから **ACRにログインするために必要な設定** を行います。
-
+ローカルPCから **ACRにログインするために必要な設定** を行います。<br>
 **設定** → **アクセスキー** → **管理者ユーザを有効**
-
 ![acr-setting](img/acr-setting.png)
 
 ## ACRのクイックスタート(ローカルで作業)
-
-
 ### ビルドしてイメージを作成
-
 ```
 docker build -t hello-world . 
 ```
-
 ### AECログイン&イメージのプッシュ
 作成したコンテナレジストリの **クイックスタート** のページを開きます。<br>クイックスタートのコマンドは自分のコンテナレジストリの名前になっているので、 **コピー&ペーストで簡単に実行できます** 。<br>(**3.ログイン**と**4.プッシュ**のコマンドを使用します)
 ![acr-login](img/acr-login.png)
 
-
-
-
-
 ## リポジトリ確認
-Azureの ホーム > コンテナレジストリ > レジストリ名  に移動
-
-リポジトリに自分のイメージがプッシュされているか確認する。
+Azureの ホーム > コンテナレジストリ > レジストリ名  に移動します。<br>
+リポジトリに自分のイメージがプッシュされているか確認する。<br>
+確認ができたら、ACRの作成は終了です。
 
 ----
 
 # App Serviceの作成
-Azureで、リソースの作成→Webアプリ→作成
-
-* リソースグループ： todoapp(ACRと同じもの)
+[https://portal.azure.com/](https://portal.azure.com/)にアクセス。 <br><br>
+「 **app service** 」と検索しApp Serviceのページを開く。<br>
+「 作成 」を押し、以下のように入力する。
+* リソースグループ： todo-app (ACRと同じもの)
 * webアプリ名：　任意の名前
 * 公開：　Dockerコンテナー
 * os: Linux
@@ -63,11 +56,13 @@ Dockerへ
 * タグ： latest
 
 作成をクリック
+## 作成完了
+App Serviceの作成が終わったら、作成されたApp Serviceに移動して作業を進めます。
 
 ## 環境変数の設定
 
 App Service→「構成」→「新しいアプリケーションの設定」に、docker-compose.ymlに書かれている SECRET_KEY を設定します。<br>
-保存ボタンを押すのを忘れないでください。
+**注意**： 保存ボタンを押すのを忘れないでください。
 
 ## 確認
 「概要」→「URL」のurlからサイトに移動できます。
@@ -183,15 +178,6 @@ docker push レジストリ名.azurecr.io/hello-world-2
 
 ## 次へ
 次はCI/CIです。
-
-ブランチを切り替えて、次の資料に進みましょう。
-```
-git add .
-git commit -m "deploy done"
-git push
-git checkout -b CI/CD
-```
-
 [CI/CDの資料](cicd.md)
 
 
