doc デプロイ資料更新

--- a/doc/デプロイ.md
+++ b/doc/デプロイ.md
@@ -77,7 +77,7 @@ apps.pyに記述された、アプリ名をsettings.pyに登録します。
 
 ↓アプリ/apps.py
 ```
-name = 'アプリ名'
+name = 'todoapp'
 ```
 
 ↓プロジェクト/settings.py
@@ -90,7 +90,7 @@ INSTALLED_APPS = [
     'django.contrib.messages',
     'django.contrib.staticfiles',
     #追加
-    'アプリ名',
+    'todoapp',
 ]
 ```
 
@@ -107,7 +107,7 @@ from django.urls import path, include # include 追加
 urlpatterns = [
     path('admin/', admin.site.urls),
     # 追加
-    path('', include('アプリ名.urls')),
+    path('', include('todoapp.urls')),
 ]
 ```
 
@@ -116,7 +116,7 @@ urlpatterns = [
 
 ↓コマンドでファイルを新規作成。GUIで作成してもOKです。
 ```
-touch アプリ名/urls.py
+touch todoapp/urls.py
 ```
 
 ## ルーティングの設定３
@@ -124,7 +124,7 @@ touch アプリ名/urls.py
 
 views.pyのindex()関数を呼び出すように設定します。
 
-↓アプリ名/urls.py
+↓todoapp/urls.py
 ```
 from django.urls import path
 
@@ -138,7 +138,7 @@ urlpatterns = [
 ## viewsの関数を作成
 views.pyにindex())関数の処理を記述します。
 
-↓アプリ名/viwes.py
+↓todoapp/viwes.py
 ```
 from django.shortcuts import render
 from django.http import HttpResponse
