doc デプロイ資料更新

--- a/doc/デプロイ.md
+++ b/doc/デプロイ.md
@@ -75,12 +75,12 @@ App Service→「構成」→「新しいアプリケーションの設定」に
 
 apps.pyに記述された、アプリ名をsettings.pyに登録します。
 
-↓アプリ/apps.py
+↓todoapp/apps.py
 ```
 name = 'todoapp'
 ```
 
-↓プロジェクト/settings.py
+↓todoproject/settings.py
 ```
 INSTALLED_APPS = [
     'django.contrib.admin',
@@ -99,7 +99,7 @@ INSTALLED_APPS = [
 次にルーティングの設定を行います。
 サーバにアクセスされた時にアプリのurls.pyを使用する設定を記入します。
 
-プロジェクト/urls.py
+todoproject/urls.py
 ```
 from django.contrib import admin
 from django.urls import path, include # include 追加
