[add]docker img

--- a/doc/環境構築.md
+++ b/doc/環境構築.md
@@ -21,7 +21,7 @@ code hol-todo-app-on-azure
 ----
 ## Docker起動
 dockerのアプリを起動します。
-
+![docker](/doc/img/docker.png)
 ----
 ## シェルスクリプト実行権限付与
 docker-compose.ymlがstartup.shを実行できるように権限を付与します。
