--- a/doc/デプロイ.md
+++ b/doc/デプロイ.md
@@ -10,7 +10,7 @@
 [https://portal.azure.com/](https://portal.azure.com/)にアクセス。<br><br>
 「 **コンテナレジストリ** 」と検索しコンテナレジストリのページを開く。<br>
 「 **作成** 」を押し、以下のように入力する。
-* リソースグループ: 「 **todo-app** 」(他の文字でも可)
+* リソースグループ: 「 **todoapp** 」(他の文字でも可)
 * レジストリ名:  **任意の文字** 
 * 場所: 「**Japan East**」
 * SKU: 「**Basic**」
@@ -40,7 +40,7 @@ Azureの ホーム > コンテナレジストリ > レジストリ名  に移動
 [https://portal.azure.com/](https://portal.azure.com/)にアクセス。 <br><br>
 「 **app service** 」と検索しApp Serviceのページを開く。<br>
 「 作成 」を押し、以下のように入力する。
-* リソースグループ： todo-app (ACRと同じもの)
+* リソースグループ： todoapp (ACRと同じもの)
 * webアプリ名：　任意の名前
 * 公開：　Dockerコンテナー
 * os: Linux
