doc アプリ作成更新

--- a/doc/アプリ作成.md
+++ b/doc/アプリ作成.md
@@ -72,7 +72,7 @@ from django.contrib import admin
 from django.urls import include, path   # includeをimport
 
 urlpatterns = [
-    path('todo/', include('todo.urls')),    # todo/でアクセスした際はtodoのurl設定を参照させる
+    path('todo/', include('todoapp.urls')),    # todo/でアクセスした際はtodoのurl設定を参照させる
     path('admin/', admin.site.urls),
 ]
 ```
