--- a/doc/デプロイ.md
+++ b/doc/デプロイ.md
@@ -15,6 +15,7 @@
 * 場所: 「**Japan East**」
 * SKU: 「**Basic**」
 ![acr-make](img/acr-make.png)
+作成後、「リソースに移動」をクリック。
 ### ACRの設定
 ローカルPCから **ACRにログインするために必要な設定** を行います。<br>
 **設定** → **アクセスキー** → **管理者ユーザを有効**
