--- a/doc/デプロイ.md
+++ b/doc/デプロイ.md
@@ -6,7 +6,7 @@
 
 ----
 
-# Azure Container Registory作成
+# ACRの作成(Azureで作業)
 [https://portal.azure.com/](https://portal.azure.com/)にアクセス。<br><br>
 「 **コンテナレジストリ** 」と検索しコンテナレジストリのページを開く。<br>
 「 **作成** 」を押し、以下のように入力する。
@@ -37,7 +37,7 @@ Azureの ホーム > コンテナレジストリ > レジストリ名  に移動
 
 ----
 
-# App Serviceの作成
+# App Serviceの作成(Azureで作業)
 [https://portal.azure.com/](https://portal.azure.com/)にアクセス。 <br><br>
 「 **app service** 」と検索しApp Serviceのページを開く。<br>
 「 作成 」を押し、以下のように入力する。
@@ -71,7 +71,7 @@ App Service→「構成」→「新しいアプリケーションの設定」に
 
 ----
 
-# Hello world
+# Hello world(VSCodeで作業)
 次に、ロケットの画面ではなく、「Helloworld」と表示されるように変更します。
 
 apps.pyに記述された、アプリ名をsettings.pyに登録します。
