--- a/doc/デプロイ.md
+++ b/doc/デプロイ.md
@@ -78,7 +78,7 @@ apps.pyに記述された、アプリ名をsettings.pyに登録します。
 
 ↓todoapp/apps.py
 ```
-name = 'todoapp'
+name = 'todoapp'　　#ここのアプリ名をsettings.pyに登録する
 ```
 
 ↓todoproject/settings.py
