--- a/doc/デプロイ.md
+++ b/doc/デプロイ.md
@@ -119,7 +119,7 @@ urlpatterns = [
 ```
 touch todoapp/urls.py
 ```
-
+![app-make-urls]()
 ## ルーティングの設定３
 サーバに、https://サーバドメイン/hello のアクセスが来たら
 
@@ -155,9 +155,12 @@ def index(request):
 ```
 docker compose up
 ```
-を実行し、[localhost:8000/hello](http://localhost:8000/hello)にアクセス。
-
-「Hello World」と表示できたら成功です。
+を実行し、[localhost:8000/hello](http://localhost:8000/hello)にアクセス。<br>
+「Hello World」と表示できたら成功です。<br><br>
+サーバ停止：ctrl + c
+```
+docker compose down
+```
 
 ## 再デプロイ
 では、もう一度デプロイをしてみましょう。 ※hello-world-2 に注意
@@ -168,13 +171,11 @@ docker push レジストリ名.azurecr.io/hello-world-2
 ```
 今回は、前回からの差分のみプッシュされるので、すぐに終わります。
 
-先ほど作成した、App Serviceに移動します。
-
-デプロイセンターに移動し、イメージで「hello-world-2」を選択し、**保存**します。
-
-設定が保存されると再デプロイされます。デプロイするのに時間がかかります。
-
-デプロイが終わると、https://サーバドメイン/hello にアクセスし、「Hello World」と表示されたら成功です。
+* pushが終わったらApp Serviceに移動します。
+* デプロイセンターに移動し、イメージで「hello-world-2」を選択し、**保存**します。
+* 設定が保存されると再デプロイされます。(デプロイするのに時間がかかります)
+* デプロイが終わると、https://サーバドメイン/hello にアクセス
+* 「Hello World」と表示されたら成功です。
 
 
 ## 次へ
