doc デプロイ資料更新

--- a/doc/デプロイ.md
+++ b/doc/デプロイ.md
@@ -26,6 +26,8 @@
 ```
 docker build -t hello-world . 
 ```
+
+
 ### AECログイン&イメージのプッシュ
 作成したコンテナレジストリの **クイックスタート** のページを開きます。<br>クイックスタートのコマンドは自分のコンテナレジストリの名前になっているので、 **コピー&ペーストで簡単に実行できます** 。<br>(**3.ログイン**と**4.プッシュ**のコマンドを使用します)
 ![acr-login](img/acr-login.png)
@@ -69,6 +71,8 @@ App Service→「構成」→「新しいアプリケーションの設定」に
 「概要」→「URL」のurlからサイトに移動できます。
 起動するまでに少し時間がかかりますが、これでデプロイ先でもロケット打ち上げ成功です。
 
+### 注意
+M1macで手順通りに、Azureにデプロイするとアプリケーションが表示されないバグが起こります。
 ----
 
 # Hello world
