--- a/doc/アプリ作成.md
+++ b/doc/アプリ作成.md
@@ -17,7 +17,12 @@ class Todo(models.Model):
 ```
 
 ### 2.Todoアプリケーションのフォーム作成
-Todoアプリケーションのフォームを作成します。入力項目をToDoのみにするため、todoapp/forms.pyを作成し、forms.pyに以下のコードの追加をお願いします。
+forms.pyの作成
+```
+touch todoapp/forms.py
+```
+
+todoapp/forms.pyに以下を追加。
 ```
 from django import forms
 from .models import Todo
@@ -65,17 +70,7 @@ class TodoDeleteView(generic.DeleteView):
 ```
 
 ### 4.TodoアプリケーションのURLを設定
-TodoアプリケーションのURL設定を行います。todo/でアクセスされた際にtodoアプリケーションのURL設定を参照するように以下のように記載します。
-↓ todoproject/urls.py
-```
-from django.contrib import admin
-from django.urls import include, path   # includeをimport
 
-urlpatterns = [
-    path('todo/', include('todoapp.urls')),    # todo/でアクセスした際はtodoのurl設定を参照させる
-    path('admin/', admin.site.urls),
-]
-```
 ↓ todoapp/urls.py
 ```
 from django.urls import path
@@ -93,7 +88,19 @@ urlpatterns = [
 ```
 
 ### 7.Todoアプリケーションのテンプレート作成
-todoapp/templates/base.htmlにhtmlのベースとなるテンプレートを作成します。
+フォルダを作成します。
+```
+mkdir todoapp/templates
+mkdir todoapp/templates/todo
+```
+htmlファイルを作成します。
+```
+touch todoapp/templates/base.html
+touch todoapp/templates/todo/todo_list.html
+touch todoapp/templates/todo/todo_detail.html
+touch todoapp/templates/todo/todo_confirm_delete.html
+```
+↓todoapp/templates/base.html
 ```
 {% load static %}
 <!DOCTYPE html>
