--- a/doc/デプロイ.md
+++ b/doc/デプロイ.md
@@ -71,8 +71,9 @@ App Service→「構成」→「新しいアプリケーションの設定」に
 「概要」→「URL」のurlからサイトに移動できます。
 起動するまでに少し時間がかかりますが、これでデプロイ先でもロケット打ち上げ成功です。
 
-### 注意
-M1macで手順通りに、Azureにデプロイするとアプリケーションが表示されないバグが起こります。
+## 注意
+既知のエラーとしてM1macで手順通りに、Azureにデプロイするとアプリケーションが表示されないことを確認しております。そうなった場合はお近くのスタッフにお声掛けください。
+
 ----
 
 # Hello world(VSCodeで作業)
