--- a/doc/デプロイ.md
+++ b/doc/デプロイ.md
@@ -73,6 +73,7 @@ App Service→「構成」→「新しいアプリケーションの設定」に
 
 ## 注意
 既知のエラーとしてM1macで手順通りに、Azureにデプロイするとアプリケーションが表示されないことを確認しております。そうなった場合はお近くのスタッフにお声掛けください。
+上記の場合でも次の資料である[CI/CD](cicd.md)の資料からは同じように動作させることが出来るため、ここからの作業は飛ばして次の資料にお進みください。
 
 ----
 
