--- a/doc/デプロイ.md
+++ b/doc/デプロイ.md
@@ -71,9 +71,10 @@ App Service→「構成」→「新しいアプリケーションの設定」に
 「概要」→「URL」のurlからサイトに移動できます。
 起動するまでに少し時間がかかりますが、これでデプロイ先でもロケット打ち上げ成功です。
 
-## 注意
-既知のエラーとしてM1macで手順通りに、Azureにデプロイするとアプリケーションが表示されないことを確認しております。そうなった場合はお近くのスタッフにお声掛けください。
-上記の場合でも次の資料である[CI/CD](cicd.md)の資料からは同じように動作させることが出来るため、ここからの作業は飛ばして次の資料にお進みください。
+> **※Mac(M1)で本手順を実施する際の注意**  
+M1のMacからAzureへのデプロイを行った際、アプリケーションが正常に動作しない場合がございます。  
+ハンズオン中にエラーが発生した場合は、お近くのスタッフにお声掛けください。  
+また、エラーが解消しない状態でハンズオンの続きを実施する際は、本章のステップは一度スキップして頂き、次の章 [CI/CD](./cicd.md) へお進みください。
 
 ----
 
