--- a/doc/アプリ作成.md
+++ b/doc/アプリ作成.md
@@ -248,6 +248,9 @@ DATABASES = {
 }
 ```
 
+# Githubにプッシュしてデプロイされたことを確認する
+CI/CDを実装しているため、Azureに自動デプロイされたことを確認してください。
+
 ### 参考サイト
 [Djangoで作るToDoリスト](https://qiita.com/acecrc/items/a4302ca6cf0897c45302)<br>
 [Django の開発環境の Dockerfile を作成してみた](https://qiita.com/sugurutakahashi12345/items/6d68e6bb9163961a8d4d)<br>
