--- a/doc/アプリ作成.md
+++ b/doc/アプリ作成.md
@@ -249,7 +249,7 @@ DATABASES = {
 ```
 
 # Githubにプッシュしてデプロイされたことを確認する
-TodoアプリがAzureに自動デプロイされたことを確認してください。
+Github actionsからTodoアプリがAzureに自動デプロイされたことを確認してください。
 
 ### 参考サイト
 [Djangoで作るToDoリスト](https://qiita.com/acecrc/items/a4302ca6cf0897c45302)<br>
