--- a/doc/アプリ作成.md
+++ b/doc/アプリ作成.md
@@ -251,6 +251,8 @@ DATABASES = {
 # Githubにプッシュしてデプロイされたことを確認する
 Github actionsからTodoアプリがAzureに自動デプロイされたことを確認してください。
 
+またTodoアプリがしっかりと機能しているか確認してみてください。
+
 ### 参考サイト
 [Djangoで作るToDoリスト](https://qiita.com/acecrc/items/a4302ca6cf0897c45302)<br>
 [Django の開発環境の Dockerfile を作成してみた](https://qiita.com/sugurutakahashi12345/items/6d68e6bb9163961a8d4d)<br>
