docアプリ作成更新

--- a/doc/アプリ作成.md
+++ b/doc/アプリ作成.md
@@ -249,8 +249,8 @@ DATABASES = {
 ```
 
 # Githubにプッシュしてデプロイされたことを確認する
-Github actionsからTodoアプリがAzureに自動デプロイされたことを確認してください。
-
+Github actionsからTodoアプリがAzureに自動デプロイされたことを確認してください。  
+![githubactions](img/githubactions.png)
 またTodoアプリがしっかりと機能しているか確認してみてください。
 
 ### 参考サイト
