doc アプリ作成変更

--- a/doc/アプリ作成.md
+++ b/doc/アプリ作成.md
@@ -251,7 +251,7 @@ DATABASES = {
 # Githubにプッシュしてデプロイされたことを確認する
 Github actionsからTodoアプリがAzureに自動デプロイされたことを確認してください。  
 ![githubactions](img/githubactions.png)
-またTodoアプリがしっかりと機能しているか確認してみてください。
+また実際にWebサイトにアクセスしてTodoアプリがしっかりと機能しているか確認してみてください。
 
 ### 参考サイト
 [Djangoで作るToDoリスト](https://qiita.com/acecrc/items/a4302ca6cf0897c45302)<br>
