--- a/doc/環境構築.md
+++ b/doc/環境構築.md
@@ -42,7 +42,7 @@ docker compose run web django-admin.py startproject todoproject .
 ```
 以下のコマンドでDjangoのアプリを作成します。
 ```
-docker compose run web django-admin.py startapp todoapp 
+docker compose run web django-admin.py startapp todo
 ```
 ----
 ## 環境変数の設定
