--- a/doc/アプリ作成.md
+++ b/doc/アプリ作成.md
@@ -105,6 +105,16 @@ class TodoDeleteView(generic.DeleteView):
 ```
 
 ### URLを設定
+↓todoproject/urls.py
+```
+from django.contrib import admin
+from django.urls import path, include
+
+urlpatterns = [
+    path('admin/', admin.site.urls),
+    path('todo/', include('todo.urls')),
+]
+```
 
 ↓ todo/urls.py
 ```
